# MIDAS

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build.sh  build_wsl_windows.sh  dev_environment.yml  dev_environment_gui.yml  environment.yml  implementation_plan.md  requirements.txt  tomo_gridrec.c  tomo_heads.h  tomo_init.c
DT/: CMakeLists.txt  Makefile  README.md  runDTrecon.py
DT/src/: DetectorGeometry.c  DetectorGeometry.h  DetectorMapper.c  FileReader.c  FileReader.h  IntegratorPeakFit.c  IntegratorPeakFitOMP.c  MIDAS_ParamParser.c  MapHeader.h  Panel.c  Panel.h  PeakFit.c  ZarrReader.c  ZarrReader.h
FF_HEDM/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CailbrationParametersExample.txt  CalibrationParametersExample.txt  FF_Analysis.md  FF_dual_datasets.md  ForwardSimulationManual.md  GetNetCDF.sh  GetPackages.sh  INSTALL.md  IndexRefine.kml  IndexRefine.sh  IndexRefine.swiftx  MIDAS_RADINT.md  Makefile  ParametersExample.txt  README.md  RealtimeAnalysisV2MultRingsPS.sh  RealtimeAnalysisV2MultRingsPS.sh~  RunPeaks.sh  RunPeaksMultPeaksOnly.kml  RunPeaksMultPeaksOnly.swiftx  RunPeaksMultProcessOnly.kml  RunPeaksMultProcessOnly.swiftx  build.sh  cf  ensure_cuda_ready.sh  environment.yaml  requirements.txt  setup.sh  sites320.xml  tc.data  trial.swift
FF_HEDM/Biocluster/: Peaks.sh  SHMOperators.sh  StrainsRefine.sh  TrackGrains.sh  getFolder.py  setup.sh  sites128.xml  sites256.xml  sites320.xml  sites384.xml
FF_HEDM/Cluster/: Hydra.sh  IndexRefine.sh  IndexRefine.swift  IndexRefineScanning.sh  IndexStrains.py  IndexStrains.sh  InitialSetup.sh  InitialSetupHydra.sh  MakeMeshGridScanning.py  MergeDetectors.py  MergeDetectors.sh  MergeMultipleScans.py  MergeRings.sh  PeakSearchHydra.sh  Peaks.sh  PeaksHydra.sh  PostPeaksSHM.sh  ProcessGrains.sh  ProcessPeaks.sh  ProcessPeaksFullImg.sh  ProcessPeaksHydra.sh  RealTimeMultipleLayersSingleSwiftJob.sh  RealtimeAnalysisGrainTracking.sh  RealtimeAnalysisMultRingsPS.sh  RealtimeAnalysisV2MultRingsPS.sh  RealtimeAnalysisV3GrainTracking.sh  RefineTracking.sh  RefineTracking.swift  RunPeaksMult.sh  RunPeaksMult.swift  RunPeaksMultPeaksOnly.swift  RunPeaksMultProcessOnly.swift  SHM.sh  SHMOperators.sh  SHMOperatorsTracking.sh  StrainsRefine.sh  TrackGrains.py  TrackGrains.sh  checkFiles.py  filterGrainsScanning.py  (+15 more)
FF_HEDM/Example/: GrainsAu.csv  GrainsReconstructed.csv  GrainsResult.csv  GrainsSim.csv  PS_FF_forward.txt  PS_analysis.txt  Parameters.txt  Parameters_px_overlaps.txt  consolidated_Output.h5  consolidated_Output_px_overlaps.h5  positions.csv
FF_HEDM/ExampleData/: Au_FF_000001.ge3.bz2  GrainsInput.csv  PS_FF_forward.txt  PS_analysis.txt
FF_HEDM/Orthros/: GetPackages.sh  IndexRefine.sh  IndexStrains.sh  Peaks.sh  ProcessPeaks.sh  ProcessPeaksFullImg.sh  RealtimeAnalysisV2.sh  RealtimeAnalysisV2MultRingsPS.sh  RealtimeAnalysisV3GrainTracking.sh  RefineTracking.sh  RefineTracking.swift  RunPeaks.swift  RunPeaksMult.sh  RunPeaksMult.swift  RunPeaksMultProcessOnly.swift  SHM.sh  SHMOperators.sh  SHMOperatorsTracking.sh  TrackGrains.sh  getFolder.py  setup.sh  sites384.xml
FF_HEDM/Orthros.old/: IndexRefine.sh  IndexRefine.swift  RealtimeAnalysisV2MultRingsPS.sh  sites64.xml
FF_HEDM/local/: GetPackages.sh  IndexRefine.sh  ProcessPeaks.sh  RealtimeAnalysisV2MultRingsPS.sh  RealtimeAnalysisV3GrainTracking.sh  RefineTracking.sh  RunPeaks.sh  RunPeaksMult.sh  SHM.sh  SHMOperators.sh  TrackGrains.sh  cf.local  setup.sh  sitesTemplate.xml
FF_HEDM/newCluster/: calcMiso.py  callPeakFitting.py  ff_globus_automate.py  indexRefine.sh  multSolPerVox.py  oneSolPerVoxTomoFilter.py  processGrains.sh  runIndexingScanning.swift  runLayer.swift  runPF.py  runPeaks.sh  runRefiningScanning.swift  run_layers.py  run_layers_arguments.py  run_scanning.py  setup_payloads.py  sites.conf  utils.py
FF_HEDM/src/: CalcDiffractionSpots.c  CalcPeakProfile.c  CalcRadius.c  CalcRadiusAll.c  CalcRadiusAllZarr.c  CalcStrains.c  CalibPeakFit.c  Calibrant.c  CalibrantEstep.h  CalibrantIntegratorOMP.c  CalibrantOMP.c  CalibrantPanelShiftsOMP.c  CalibrationCore.c  CalibrationCore.h  ConvTiffToGE.c  DetectorGeometry.c  DetectorGeometry.h  DetectorMapper.c  DetectorMapperCSR.c  DetectorMapperGPUCSR.cu  DetectorMapperZarr.c  FileReader.c  FileReader.h  FindSaturatedPixels.c  FitGrain.c  FitGrainHydra.c  FitMultipleGrains.c  FitOrStrainsScanningGPU.cu  FitOrStrainsScanningOMP.c  FitPosOrStrains.c  FitPosOrStrains.cu  FitPosOrStrainsDoubleDataset.c  FitPosOrStrainsGPU.cu  FitPosOrStrainsOMP.c  FitPosOrStrainsScanningHEDM.c  FitScanningGrain.c  FitSetupParamsAll.c  FitSetupParamsAllZarr.c  FitTiltBCLsdSample.c  FitTiltBCLsdSample.c~  (+99 more)
FF_HEDM/test/: hkls.csv  params.txt  params.txt~
FF_HEDM/v7/: adhocConfig.py  ff_MIDAS.py  ff_apps.py  ff_deprecated.py  ff_dual_datasets.py  ff_hedm_v7.py  localConfig.py  orthrosAllConfig.py  pf_MIDAS.py  purdueConfig.py  uMichConfig.py
FF_HEDM/workflows/: _sr_midas_shim.py  adhocConfig.py  ff_MIDAS.py  ff_dual_datasets.py  integrate_and_refine.py  integrator.py  integrator_batch_process.py  integrator_server.py  integrator_stream_process_h5.py  localConfig.py  marquetteConfig.py  orthrosAllConfig.py  pf_MIDAS.py  polarisConfig.py
NF_HEDM/: CMakeLists.txt  ConvertFiles.sh  FitOrientation.kml  FitOrientation.swiftx  GetPackages.sh  ImageProcessing.sh  Makefile  MapMask.sh~  ParseMicResults.sh  ProcessImages.kml  ProcessImages.swift  ProcessImages.swiftx  ProcessImagesParallel.kml  ProcessImagesParallel.swift  ProcessImagesParallel.swiftx  ProcessMedianParallel.kml  ProcessMedianParallel.swiftx  README.md  cf_local  copyscript.sh  copyscript.sh~  run.sh  runMultipleLayers.sh  runMultipleLayers.sh~  runNFImages.sh~  runNFParameters.sh  runNFParameters.sh~  runSingleLayer.sh~  sites320.xml~
NF_HEDM/Cluster/: ConvertFiles.sh  FitOrientation.sh  FitOrientation.swift  GridSorter.py  ImageProcessingParallel.sh  MapMask.sh  MedianImageParallel.sh  MicParser.sh  ParseMicResults.sh  SingleLayerSwift.sh  (+13 more)
TOMO/: CMakeLists.txt  Makefile  README.md  midas_tomo_python.py  process_hdf.py
(+493 files in other folders)
